syntax = "proto3";

package kessel.relations.v0;

import "google/api/annotations.proto";
import "relations/v0/common.proto";

option go_package = "ciam-rebac/api/relations/v0;v0";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.relations.v0";

service Lookup {
    rpc Subjects(LookupSubjectsRequest) returns (stream LookupSubjectsResponse) {
        option (google.api.http) = {
            get: "/v1/subjects"
        };
    };
}

message LookupSubjectsRequest {
    string subject_type = 1;
    string relation = 2;
    ObjectReference object = 3;
    optional uint32 limit = 4;
    optional string continuation_token = 5;
}

message LookupSubjectsResponse {
    SubjectReference subject = 1;
    bool has_more = 2;
    string continuation_token = 3;
}