syntax = "proto3";

package api.relations.v1;

import "google/api/annotations.proto";
import "relations/v1/common.proto";

option go_package = "ciam-rebac/api/relations/v1;v1";
option java_multiple_files = true;
option java_package = "api.relations.v1";

service RelationTupleService {
	rpc CreateTuples (CreateTuplesRequest) returns (CreateTuplesResponse) {
		option (google.api.http) = {
			post: "/v1/relation-tuples"
			body: "*"
		};
	};
	rpc ReadTuples (ReadTuplesRequest) returns (ReadTuplesResponse) {
		option (google.api.http) = {
			get: "/v1/relation-tuples"
		};
	};
	rpc DeleteTuples (DeleteTuplesRequest) returns (DeleteTuplesResponse) {
		option (google.api.http) = {
			delete: "/v1/relation-tuples"
		};
	};
}

message CreateTuplesRequest {
	bool upsert = 1;
	repeated Relationship tuples = 2;
}
message CreateTuplesResponse {}

message ReadTuplesRequest {
	RelationshipFilter filter = 1;
}
message ReadTuplesResponse {
	repeated Relationship tuples = 1;
}

message DeleteTuplesRequest {
	RelationshipFilter filter = 1;
}
message DeleteTuplesResponse {}

message RelationshipFilter {
	string object_type = 1;
	string object_id = 2;
	string relation = 3;
	SubjectFilter subject_filter = 4;
}

message SubjectFilter {
	string relation = 1;
	string subject_id = 2;
	string subject_type = 3;
}
